FIXED: Tanks now render their fluid levels in inventory, item frames and as drops

--- a/src/main/resources/assets/zapapples/lang/en_US.lang
+++ b/src/main/resources/assets/zapapples/lang/en_US.lang
@@ -7,6 +7,7 @@ tile.grayApple.name=Premature Zap Apple
 tile.zapApple.name=Zap Apple
 tile.zapPlanks.name=Zap Apple Wood Planks
 tile.zapAppleWoodDoor=Zap Apple Wood Door
+tile.stoneDoor=Stone Door
 tile.jamFood.name=Zap Apple Bread
 tile.flour.name=Flour
 tile.zapAppleJamBlock.name=Zap Apple Jam
@@ -40,6 +41,8 @@ item.icing.orange.name=Orange
 item.icing.vanilla.name=Vanilla
 item.jamFood.name=Zap Apple Jam Sandwich
 
+item.stoneDoor=Stone Door
+item.zapAppleWoodDoor=Zap Apple Wood Door
 item.zapAppleMushed.name=Pureed Zap Apple
 item.zapAppleJamBucket.name=Zap Apple Jam Bucket
 item.doughBucket.name=Dough Bucket
