Tried to fix the Howl Sound Effect, not verified.

--- a/src/main/resources/assets/zapapples/lang/en_US.lang
+++ b/src/main/resources/assets/zapapples/lang/en_US.lang
@@ -6,9 +6,8 @@ tile.zapAppleFlowers.name=Zap Apple Flower
 tile.grayApple.name=Premature Zap Apple
 tile.zapApple.name=Zap Apple
 tile.zapPlanks.name=Zap Apple Wood Planks
-tile.zapAppleWoodDoor=Zap Apple Wood Door
-tile.stoneDoor=Stone Door
-tile.jamFood.name=Zap Apple Bread
+tile.zapAppleWoodDoor.name=Zap Apple Wood Door
+tile.stoneDoor.name=Stone Door
 tile.flour.name=Flour
 tile.zapAppleJamBlock.name=Zap Apple Jam
 tile.jamBucket.name=Zap Apple Jam
@@ -39,10 +38,10 @@ item.icing.light_blue.name=Light Blue
 item.icing.magenta.name=Magenta
 item.icing.orange.name=Orange
 item.icing.vanilla.name=Vanilla
-item.jamFood.name=Zap Apple Jam Sandwich
+item.jamSandwich.name=Zap Apple Jam Sandwich
 
-item.stoneDoor=Stone Door
-item.zapAppleWoodDoor=Zap Apple Wood Door
+item.stoneDoor.name=Stone Door
+item.zapAppleWoodDoor.name=Zap Apple Wood Door
 item.zapAppleMushed.name=Pureed Zap Apple
 item.zapAppleJamBucket.name=Zap Apple Jam Bucket
 item.doughBucket.name=Dough Bucket
