Fixed Recipes and Added method of getting Mushed Zap Apple

--- a/src/main/resources/assets/zapapples/lang/en_US.lang
+++ b/src/main/resources/assets/zapapples/lang/en_US.lang
@@ -42,7 +42,7 @@ item.jamSandwich.name=Zap Apple Jam Sandwich
 
 item.stoneDoor.name=Stone Door
 item.zapAppleWoodDoor.name=Zap Apple Wood Door
-item.zapAppleMushed.name=Pureed Zap Apple
+item.zapAppleMushed.name=Mushed Zap Apple
 item.zapAppleJamBucket.name=Zap Apple Jam Bucket
 item.doughBucket.name=Dough Bucket
 
